2005-09-09  Andreas Kupries <andreask@activestate.com>

	* generic/tclIORChan.c (RcDecodeEventMask): Added missing type
	  declaration for the parameter 'mask'. This fixes the [SF Tcl Bug
	  1286256]. The other warning can be removed only by removing the
	  panic/return code.

2005-09-09  Kevin Kenny  <kennykb@acm.org>

	* generic/tclStringObj.c:  Added two missing casts to silence
	messages from MSVC6.
	
2005-09-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclInt.h:		New internal routine TclObjPrintf()
	* generic/tclStringObj.c:	is similar to TclFormatObj() but
	accepts arguments in non-Tcl_Obj format.

	* generic/tclInt.h:		New internal routines TclFormatObj()
	* generic/tclStringObj.c:	and TclAppendFormattedObjs() to offer
	sprintf()-like means to append to Tcl_Obj.  Work in progress toward
	[RFE 572392].

	* generic/tclCmdAH.c:	Compiler directive NEW_FORMAT when #define'd
	directs the [format] command to be implemented in terms of the new
	TclAppendFormattedObjs() routine.

2005-09-08  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	TIP#254 IMPLEMENTATION

	* generic/tclLink.c (LinkTraceProc,ObjValue): Added many new of C var
	* generic/tcl.h:			      to link to, making it
	* doc/LinkVar.3:			      easier to seamlessly
	* generic/tclTest.c (TestlinkCmd):	      couple C code and Tcl
	* tests/link.test:			      scripts in an
	application. [Patch 1242844]

2005-09-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtf.c (Tcl_UniCharToUtf):	Corrected handling of negative
	* tests/utf.test (utf-1.5):	Tcl_UniChar input value.  Incorrect
	handling was producing byte sequences outside of Tcl's legal internal
	encoding.  [Bug 1283976].

2005-09-06  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclInt.h (List): Added flag to keep track of whether a list
	* generic/tclListObj.c:    with a string rep is provably canonical.
	* generic/tclUtil.c (Tcl_ConcatObj):  Do efficient concatenation and